# tree-sitter-yuck

./: .eslintrc.js  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: yuck.h
queries/: highlights.scm  injections.scm  nvim-highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: test.txt
