[package]
name = "tree-sitter-yuck"
description = "Yuck grammar for tree-sitter"
version = "0.0.1"
authors = [
	"Philipp Mildenberger <philipp@mildenberger.me>",
	"Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "yuck", "eww"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Philipp-M/tree-sitter-yuck"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.9"

[build-dependencies]
cc = "1.0"
